@@ -6,6 +6,7 @@
 			<doNotOverride>operaction</doNotOverride>
 			<doNotOverride>autoaction</doNotOverride>
 			<doNotOverride>tticket</doNotOverride>
+			<doNotOverride>script</doNotOverride>
 		</security>
 	</global>
         <event-file>@root.install@/etc/events/3Com.events.xml</event-file>
@@ -185,6 +186,18 @@
 		<logmsg dest='logndisplay'>
 			&lt;p&gt;The poller configuration files have
 			changed.&lt;/p&gt;
+		</logmsg>
+		<severity>Major</severity>
+	</event>
+	<event>
+		<uei>uei.opennms.org/internal/reloadScriptConfig</uei>
+		<event-label>OpenNMS-defined internal event: reloadScriptConfig</event-label>
+		<descr>
+			&lt;p&gt;The administrator has changed the ScriptD
+			configuration. ScriptD will load the new configuration.&lt;/p&gt;
+		</descr>
+		<logmsg dest='logndisplay'>
+			&lt;p&gt;The ScriptD configuration files have changed.&lt;/p&gt;
 		</logmsg>
 		<severity>Major</severity>
 	</event>
@@ -795,5 +808,50 @@
 		</logmsg>
 		<severity>Major</severity>
 	</event>
+	<event>
+                <mask>  
+                        <maskelement>   
+                                <mename>id</mename>   
+                                <mevalue>.1.3.6.1.4.1.5813.1</mevalue>
+                        </maskelement>  
+                        <maskelement>   
+                                <mename>generic</mename>   
+                                <mevalue>6</mevalue>  
+                        </maskelement>
+                        <maskelement>
+                                <mename>specific</mename>
+                                <mevalue>1</mevalue>
+                        </maskelement>
+                </mask>
+                <uei>uei.opennms.org/traps/forwardedEvent</uei>
+                <event-label>OpenNMS-defined SNMP Trap: forwardedEvent</event-label>
+                <descr>
+                        &lt;p&gt;An OpenNMS Event has been received as an SNMP Trap with
+                        the following information:&lt;/p&gt;
+                        &lt;UL&gt;
+                        &lt;LI&gt;Database ID: %parm[#1]%
+                        &lt;LI&gt;Distributed Poller Name: %parm[#2]%
+                        &lt;LI&gt;Event Creation Time: %parm[#3]%
+                        &lt;LI&gt;Master Station: %parm[#4]%
+                        &lt;LI&gt;UEI: %parm[#5]%
+                        &lt;LI&gt;Source: %parm[#6]%
+                        &lt;LI&gt;Node ID: %parm[#7]%
+                        &lt;LI&gt;Time: %parm[#8]%
+                        &lt;LI&gt;Host: %parm[#9]%
+                        &lt;LI&gt;Interface: %parm[#10]%
+                        &lt;LI&gt;SNMP Host: %parm[#11]%
+                        &lt;LI&gt;Service: %parm[#12]%
+                        &lt;LI&gt;Description: %parm[#13]%
+                        &lt;LI&gt;Severity: %parm[#14]%
+                        &lt;LI&gt;Path Outage: %parm[#15]%
+                        &lt;LI&gt;Operator Instructions: %parm[#16]%
+                        &lt;/UL&gt;
+                </descr>                
+                <logmsg dest='logndisplay'>                        
+                        &lt;p&gt;An OpenNMS Event has been received as an SNMP Trap with UEI:
+                        %parm[#5]%.&lt;/p&gt;
+                </logmsg>
+                <severity>Indeterminate</severity>
+        </event>
 	<event-file>@root.install@/etc/events/default.events.xml</event-file>
 </events>
