@@ -124,7 +124,17 @@ log4j.appender.ACTIOND.MaxBackupIndex=4
 log4j.appender.ACTIOND.File=@root.install.logs@/actiond.log
 log4j.appender.ACTIOND.layout=org.apache.log4j.PatternLayout
 log4j.appender.ACTIOND.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
- 
+
+# Scriptd
+log4j.category.OpenNMS.Scriptd=DEBUG, SCRIPTD
+log4j.additivity.OpenNMS.Scriptd=false
+log4j.appender.SCRIPTD=org.apache.log4j.RollingFileAppender
+log4j.appender.SCRIPTD.MaxFileSize=100MB
+log4j.appender.SCRIPTD.MaxBackupIndex=4
+log4j.appender.SCRIPTD.File=@root.install.logs@/scriptd.log
+log4j.appender.SCRIPTD.layout=org.apache.log4j.PatternLayout
+log4j.appender.SCRIPTD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
+
 # RTC
 log4j.category.OpenNMS.RTCManager=DEBUG, RTC
 log4j.additivity.OpenNMS.RTCManager=false
