@@ -98,6 +98,14 @@ maintained
 		<invoke at="stop" pass="0" method="stop"/>
 	</service>
 	<service>
+		<name>OpenNMS:Name=Scriptd</name>
+		<class-name>org.opennms.netmgt.scriptd.jmx.Scriptd</class-name>
+		<invoke pass="0" method="init"/>
+		<invoke pass="1" method="start"/>
+		<invoke at="status" pass="0" method="status"/>
+		<invoke at="stop" pass="0" method="stop"/>
+	</service>
+	<service>
 		<name>OpenNMS:Name=Outaged</name>
 		<class-name>org.opennms.netmgt.outage.jmx.Outaged</class-name>
 		<invoke pass="0" method="init"/>
