@@ -144,6 +144,11 @@ public final class ConfigFileConstants
 	 */
 	public static final int VULNSCAND_CONFIG_FILE_NAME;
 	
+	/**
+	 * The opennms scriptd config file
+	 */
+	public static final int SCRIPTD_CONFIG_FILE_NAME;
+
 	//
 	// End services config files
 	//
@@ -376,9 +381,11 @@ public final class ConfigFileConstants
 
 		KSC_REPORT_FILE_NAME			= 46;
 		
+        SCRIPTD_CONFIG_FILE_NAME		= 47;
+		
 		// Allocate and build the mapping of identifiers to names
 		//
-		FILE_ID_TO_NAME = new String[47];
+		FILE_ID_TO_NAME = new String[48];
 
 		FILE_ID_TO_NAME[DB_CONFIG_FILE_NAME] 		= "opennms-database.xml";
 		FILE_ID_TO_NAME[JMS_CONFIG_FILE_NAME]		= "opennms-jms.xml";
@@ -440,6 +447,8 @@ public final class ConfigFileConstants
 		FILE_ID_TO_NAME[WEBUI_COLORS_FILE_NAME]         = "webui-colors.xml";
 
 		FILE_ID_TO_NAME[KSC_REPORT_FILE_NAME]         	= "ksc-performance-reports.xml";
+        
+		FILE_ID_TO_NAME[SCRIPTD_CONFIG_FILE_NAME]		= "scriptd-configuration.xml";
 	}
 
 	/**
